[package]
name = "grip-rust"
version = "0.0.7-alpha"
authors = ["alik"]
edition = "2018"
build = "src/build.rs"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
panic = "abort"

[features]
vendored = ["reqwest/default-tls-vendored"]
# default = ["vendored"] # TODO: Conditional dynamic linking.

[dependencies]
bytes = "0.4.12"
crossbeam-channel = "0.3.8"
reqwest = { version = "0.9.12", features = ["trust-dns"] }
futures = "0.1.25"
derive_more = "0.14.0"
libc = "0.2.50"
tokio = "0.1.18"
derive_builder = "0.7.1"
error-chain = { version = "0.12.0", default-features = false }
log = "0.4.6"
rust-ini = "0.13.0"
clone_all = "0.1.1"
either = "1.5.1"
lazy_static = "1.3.0"
serde_json = {version = "1.0.39", features = ["preserve_order"] }
float-cmp = "0.4.0"
bacon_rajan_cc = "0.2.4"
newtype_derive = "0.1.6"
custom_derive = "0.1.7"
indexmap = "1.0.2"

[build-dependencies]
cbindgen = "0.8.2"