[package]
name = "grip-rust"
version = "0.1.5-beta"
authors = ["alik"]
edition = "2018"
build = "src/build.rs"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "unwind"

[profile.release]
lto = "fat"
panic = "unwind"
codegen-units = 1
opt-level = 3

[dependencies]
bytes = "0.4.12"
crossbeam-channel = "0.3.8"
reqwest = { version = "0.9.18", default-features = false, features = ["trust-dns", "rustls-tls"] }
futures = "0.1.28"
derive_more = "0.15.0"
libc = "0.2.67"
tokio = "0.1.22"
derive_builder = "0.7.2"
error-chain = { version = "0.12.1", default-features = false }
log = "0.4.7"
rust-ini = "0.13.0"
clone_all = "0.1.1"
either = "1.5.2"
lazy_static = "1.4.0"
serde_json = {version = "1.0.40", features = ["preserve_order"] }
float-cmp = "0.4.0"
bacon_rajan_cc = "0.2.4"
newtype_derive = "0.1.6"
custom_derive = "0.1.7"
indexmap = "1.0.2"
owning_ref = "0.4.0"
fnv = "1.0.6"

[build-dependencies]
cbindgen = "0.9.0"